--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</main>
 		<footer>
 			<h2><a href=""><span>WEB</span>STUDIO</a></h2>
-			<p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
+			<p>Increase the flow of customers and<br>sales for your business with digital<br>marketing &amp; growth solutions.</p>
 		</footer>
 	</body>
 </html>
