no numbers in imeges files

--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
 						<h2>Our Team</h2>
 						<ul>
 							<li>
-								<img src="./images/team1Mark.jpg" width="264" alt="Mark Guerrero, Product Designer">
+								<img src="./images/team_mark.jpg" width="264" alt="Mark Guerrero, Product Designer">
 								<h3>Mark Guerrero</h3>
 								<p>Product Designer</p>
 							</li>
 							<li>
-								<img src="./images/team2Tom.jpg" width="264" alt="Tom Ford, Frontend Developer">
+								<img src="./images/team_tom.jpg" width="264" alt="Tom Ford, Frontend Developer">
 								<h3>Tom Ford</h3>
 								<p>Frontend Developer</p>
 							</li>
 							<li>
-								<img src="./images/team3Camila.jpg" width="264" alt="Camila Garcia, Marketing">
+								<img src="./images/team_camila.jpg" width="264" alt="Camila Garcia, Marketing">
 								<h3>Camila Garcia</h3>
 								<p>Marketing</p>
 							</li>
 							<li>
-								<img src="./images/team4Daniel.jpg" width="264" alt="Daniel Wilson, UI Designer">
+								<img src="./images/team_daniel.jpg" width="264" alt="Daniel Wilson, UI Designer">
 								<h3>Daniel Wilson</h3>
 								<p>UI Designer</p>
 							</li>
