--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="nav">
-        <a class="logo" href="/">
+        <a class="logo" href="./index.html">
           <span class="logo-accent">web</span>studio
         </a>
         <ul class="list">
