--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               width="264"
               alt="Tom Ford, Frontend Developer"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
           <li>
@@ -138,7 +138,7 @@
               width="264"
               alt="Camila Garcia, Marketing"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
           <li>
@@ -147,7 +147,7 @@
               width="264"
               alt="Daniel Wilson, UI Designer"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
         </ul>
