--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,8 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="title">Cashless Payment</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="card">
@@ -82,8 +82,8 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
+              <h2 class="title">Meditaion App</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li class="card">
@@ -93,8 +93,8 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="title">Taxi Service</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="card">
@@ -104,8 +104,8 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="title">Screen Illustrations</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li class="card">
@@ -115,8 +115,8 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="title">Online Courses</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="card">
@@ -126,8 +126,8 @@
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li class="card">
@@ -137,8 +137,8 @@
                 alt="Organic Food"
                 width="360"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="title">Organic Food</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
           <li class="card">
@@ -148,8 +148,8 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
         </ul>
