--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header container">
       <nav class="nav">
         <a class="logo" href="./index.html">
           <span class="logo-accent">web</span>studio
@@ -49,31 +56,31 @@
         <button class="button primery" type="button">Order Service</button>
       </section>
       <!-- !FEATURE -->
-      <section class="section">
+      <section class="section container">
         <h2 class="hidden">Our features</h2>
         <ul class="feature list">
-          <li>
+          <li class="item">
             <h3 class="title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
@@ -83,11 +90,12 @@
         </ul>
       </section>
       <!-- !WHAT ARE WE DOING -->
-      <section class="section">
+      <section class="wedo-section container">
         <h2 class="title">What are we doing</h2>
         <ul class="list">
           <li>
             <img
+              class="image"
               src="./images/index_page/display.jpg"
               width="360"
               alt="Display with some app preview"
@@ -95,6 +103,7 @@
           </li>
           <li>
             <img
+              class="image"
               src="./images/index_page/chatscreens.jpg"
               width="360"
               alt="Smartphone with chat app screenshots"
@@ -102,6 +111,7 @@
           </li>
           <li>
             <img
+              class="image"
               src="./images/index_page/smartphone.jpg"
               width="360"
               alt="Smartphone preview"
@@ -111,11 +121,12 @@
       </section>
 
       <!-- !OUR TEAM -->
-      <section class="team-section">
+      <section class="team-section container">
         <h2 class="title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="item">
             <img
+              class="image"
               src="./images/index_page/team_mark.jpg"
               width="264"
               alt="Mark Guerrero, Product Designer"
@@ -123,8 +134,9 @@
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img
+              class="image"
               src="./images/index_page/team_tom.jpg"
               width="264"
               alt="Tom Ford, Frontend Developer"
@@ -132,8 +144,9 @@
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img
+              class="image"
               src="./images/index_page/team_camila.jpg"
               width="264"
               alt="Camila Garcia, Marketing"
@@ -141,8 +154,9 @@
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
+              class="image"
               src="./images/index_page/team_daniel.jpg"
               width="264"
               alt="Daniel Wilson, UI Designer"
@@ -153,12 +167,14 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
-      <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
-      </p>
+    <footer class="footer container">
+      <div class="text">
+        <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
+        <p class="text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
