--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header container">
       <nav class="nav">
         <a class="logo" href="./index.html">
           <span class="logo-accent">web</span>studio
@@ -41,10 +48,10 @@
       </address>
     </header>
     <main>
-      <section class="section">
+      <section class="section container">
         <header>
           <h1 class="hidden">Portfolio</h1>
-          <ul class="list">
+          <ul class="filter list">
             <li class="list"><button class="button">ALL</button></li>
             <li class="list"><button class="button">Web Site</button></li>
             <li class="list"><button class="button">App</button></li>
@@ -155,7 +162,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
       <p class="text">
         Increase the flow of customers and sales for your business with digital
