--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
           <span class="logo-accent">web</span>studio
         </a>
         <ul class="list">
-          <li>
+          <li class="item">
             <a class="link" href="/studio">Studio</a>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="./portfolio.html" target="_self">Portfolio</a>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="/contacts">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="contacts">
         <ul class="list">
-          <li>
+          <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
               info@devstudio.com
             </a>
           </li>
-          <li>
+          <li class="item">
             <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -51,37 +51,37 @@
     </header>
     <main>
       <!-- !HERO -->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="button primery" type="button">Order Service</button>
       </section>
       <!-- !FEATURE -->
       <section class="section container">
         <h2 class="hidden">Our features</h2>
-        <ul class="feature list">
+        <ul class="column-flexlist">
           <li class="item">
-            <h3 class="title">Strategy</h3>
+            <h3 class="list-title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="item">
-            <h3 class="title">Punctuality</h3>
+            <h3 class="list-title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="item">
-            <h3 class="title">Diligence</h3>
+            <h3 class="list-title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="item">
-            <h3 class="title">Technologies</h3>
+            <h3 class="list-title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -90,9 +90,9 @@
         </ul>
       </section>
       <!-- !WHAT ARE WE DOING -->
-      <section class="wedo-section container">
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
+      <section class="section container">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="column-flexlist">
           <li>
             <img
               class="image"
@@ -121,9 +121,9 @@
       </section>
 
       <!-- !OUR TEAM -->
-      <section class="team-section container">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
+      <section class="team section container">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="column-flexlist">
           <li class="item">
             <img
               class="image"
@@ -131,8 +131,10 @@
               width="264"
               alt="Mark Guerrero, Product Designer"
             />
-            <h3 class="title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
+            <div class="item-content">
+              <h3 class="team-title">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </div>
           </li>
           <li class="item">
             <img
@@ -141,8 +143,10 @@
               width="264"
               alt="Tom Ford, Frontend Developer"
             />
-            <h3 class="title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
+            <div class="item-content">
+              <h3 class="title">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </div>
           </li>
           <li class="item">
             <img
@@ -151,8 +155,10 @@
               width="264"
               alt="Camila Garcia, Marketing"
             />
-            <h3 class="title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
+            <div class="item-content">
+              <h3 class="title">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </div>
           </li>
           <li class="item">
             <img
@@ -161,8 +167,10 @@
               width="264"
               alt="Daniel Wilson, UI Designer"
             />
-            <h3 class="title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
+            <div class="item-content">
+              <h3 class="title">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
