--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,10 @@
       </address>
     </header>
     <main>
-      <section class="section container">
-        <header>
+      <section class="portfolio section container">
+        <header class="filter">
           <h1 class="hidden">Portfolio</h1>
-          <ul class="filter list">
+          <ul class="filter-list">
             <li class="list"><button class="button">ALL</button></li>
             <li class="list"><button class="button">Web Site</button></li>
             <li class="list"><button class="button">App</button></li>
@@ -59,104 +59,132 @@
             <li class="list"><button class="button">Marketing</button></li>
           </ul>
         </header>
-        <ul class="portfolio list">
-          <li>
+        <ul class="column-flexlist">
+          <li class="card">
             <a href="/" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/banking_app.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h2 class="title">Banking App Interface Concept</h2>
-              <p class="text">App</p>
+              <div class="item-content">
+                <h2 class="list-title">Banking App Interface Concept</h2>
+                <p class="text">App</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/cashless_payment.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2 class="title">Cashless Payment</h2>
-              <p class="text">Marketing</p>
+              <div class="item-content">
+                <h2 class="list-title">Cashless Payment</h2>
+                <p class="text">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/meditaion.jpg"
                 alt="Meditaion App"
                 width="360"
               />
-              <h2 class="title">Meditaion App</h2>
-              <p class="text">App</p>
+              <div class="item-content">
+                <h2 class="list-title">Meditaion App</h2>
+                <p class="text">App</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/taxi.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h2 class="title">Taxi Service</h2>
-              <p class="text">Marketing</p>
+
+              <div class="item-content">
+                <h2 class="list-title">Taxi Service</h2>
+                <p class="text">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/screen.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2 class="title">Screen Illustrations</h2>
-              <p class="text">Design</p>
+              <div class="item-content">
+                <h2 class="list-title">Screen Illustrations</h2>
+                <p class="text">Design</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/online.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h2 class="title">Online Courses</h2>
-              <p class="text">Marketing</p>
+              <div class="item-content">
+                <h2 class="list-title">Online Courses</h2>
+                <p class="text">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/inst.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h2 class="title">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
+              <div class="item-content">
+                <h2 class="list-title">Instagram Stories Concept</h2>
+                <p class="text">Design</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/organic.jpg"
                 alt="Organic Food"
                 width="360"
               />
-              <h2 class="title">Organic Food</h2>
-              <p class="text">Web Site</p>
+              <div class="item-content">
+                <h2 class="list-title">Organic Food</h2>
+                <p class="text">Web Site</p>
+              </div>
             </a>
           </li>
           <li class="card">
             <a href="" class="link">
               <img
+                class="image"
                 src="./images/portfolio_page/coffee.jpg"
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2 class="title">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
+              <div class="item-content">
+                <h2 class="list-title">Fresh Coffee</h2>
+                <p class="text">Web Site</p>
+              </div>
             </a>
           </li>
         </ul>
