--- a/portfolio.html
+++ b/portfolio.html
@@ -19,37 +19,43 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header container">
-      <nav class="nav">
-        <a class="logo" href="./index.html">
-          <span class="logo-accent">web</span>studio
-        </a>
-        <ul class="list">
-          <li><a class="link" href="/studio">Studio</a></li>
-          <li>
-            <a class="link current" href="./portfolio.html" target="_self"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="link" href="/contacts">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com">
-              info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="logo" href="./index.html">
+            <span class="logo-accent">web</span>studio
+          </a>
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="/studio">Studio</a>
+            </li>
+            <li class="item">
+              <a class="link current" href="./portfolio.html" target="_self"
+                >Portfolio</a
+              >
+            </li>
+            <li class="item">
+              <a class="link" href="/contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="portfolio section container">
-        <header class="filter">
+      <section class="portfolio section">
+        <div class="container">
           <h1 class="hidden">Portfolio</h1>
           <ul class="filter-list">
             <li class="list"><button class="button">ALL</button></li>
@@ -58,144 +64,149 @@
             <li class="list"><button class="button">Design</button></li>
             <li class="list"><button class="button">Marketing</button></li>
           </ul>
-        </header>
-        <ul class="column-flexlist">
-          <li class="card">
-            <a href="/" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/banking_app.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Banking App Interface Concept</h2>
-                <p class="text">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/cashless_payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Cashless Payment</h2>
-                <p class="text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/meditaion.jpg"
-                alt="Meditaion App"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Meditaion App</h2>
-                <p class="text">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-
-              <div class="item-content">
-                <h2 class="list-title">Taxi Service</h2>
-                <p class="text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Screen Illustrations</h2>
-                <p class="text">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/online.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Online Courses</h2>
-                <p class="text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/inst.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Instagram Stories Concept</h2>
-                <p class="text">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/organic.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Organic Food</h2>
-                <p class="text">Web Site</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="" class="link">
-              <img
-                class="image"
-                src="./images/portfolio_page/coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <div class="item-content">
-                <h2 class="list-title">Fresh Coffee</h2>
-                <p class="text">Web Site</p>
-              </div>
-            </a>
-          </li>
-        </ul>
+          <ul class="portfolio-cards">
+            <li class="card">
+              <a href="/" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/banking_app.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/cashless_payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/meditaion.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Meditaion App</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/inst.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/organic.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="card">
+              <a href="" class="link">
+                <img
+                  class="image"
+                  src="./images/portfolio_page/coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="item-content">
+                  <h2 class="list-title">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer container">
-      <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <div class="text">
+          <a class="logo" href="/"
+            ><span class="logo-accent">web</span>studio</a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &amp; growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
