--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 alt="Tom Ford, Frontend Developer"
               />
               <div class="item-content">
-                <h3 class="title">Tom Ford</h3>
+                <h3 class="team-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
               </div>
             </li>
@@ -167,7 +167,7 @@
                 alt="Camila Garcia, Marketing"
               />
               <div class="item-content">
-                <h3 class="title">Camila Garcia</h3>
+                <h3 class="team-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
@@ -179,7 +179,7 @@
                 alt="Daniel Wilson, UI Designer"
               />
               <div class="item-content">
-                <h3 class="title">Daniel Wilson</h3>
+                <h3 class="team-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
             </li>
@@ -189,15 +189,11 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="text">
-          <a class="logo" href="/"
-            ><span class="logo-accent">web</span>studio</a
-          >
-          <p class="text">
-            Increase the flow of customers and sales for your business with
-            digital marketing &amp; growth solutions.
-          </p>
-        </div>
+        <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
+        <p class="text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
       </div>
     </footer>
   </body>
