--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
         <div class="container">
           <h1 class="hidden">Portfolio</h1>
           <ul class="filter-list">
-            <li class="list"><button class="button">ALL</button></li>
+            <li class="list"><button class="button">All</button></li>
             <li class="list"><button class="button">Web Site</button></li>
             <li class="list"><button class="button">App</button></li>
             <li class="list"><button class="button">Design</button></li>
@@ -197,15 +197,11 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="text">
-          <a class="logo" href="/"
-            ><span class="logo-accent">web</span>studio</a
-          >
-          <p class="text">
-            Increase the flow of customers and sales for your business with
-            digital marketing &amp; growth solutions.
-          </p>
-        </div>
+        <a class="logo" href="/"><span class="logo-accent">web</span>studio</a>
+        <p class="text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
       </div>
     </footer>
   </body>
