one more correction

--- a/index.html
+++ b/index.html
@@ -64,30 +64,30 @@
       <!-- !FEATURE -->
       <section class="section">
         <div class="container">
-          <h2 class="hidden">Our features</h2>
-          <ul class="column-flexlist">
-            <li class="item">
+          <h2 hidden>Our features</h2>
+          <ul class="section-list">
+            <li class="feature-item">
               <h3 class="list-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="item">
+            <li class="feature-item">
               <h3 class="list-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="item">
+            <li class="feature-item">
               <h3 class="list-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="item">
+            <li class="feature-item">
               <h3 class="list-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -101,7 +101,7 @@
       <section class="whatwedo section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
-          <ul class="column-flexlist">
+          <ul class="section-list">
             <li>
               <img
                 class="image"
@@ -134,7 +134,7 @@
       <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul class="column-flexlist">
+          <ul class="section-list">
             <li class="item">
               <img
                 class="image"
