--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main mage</title>
+    <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -56,7 +56,7 @@
     <main>
       <section class="portfolio section">
         <div class="container">
-          <h1 class="hidden">Portfolio</h1>
+          <h1 hidden>Portfolio</h1>
           <ul class="filter-list">
             <li class="list"><button class="button">All</button></li>
             <li class="list"><button class="button">Web Site</button></li>
