--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </a>
           <ul class="list">
             <li class="item">
-              <a class="link" href="/studio">Studio</a>
+              <a class="link current" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="link" href="./portfolio.html" target="_self"
